--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.VishuJaatsAndroidLabs" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.VishuJaatsAndroidLabs" parent="Theme.Material3.DayNight">
+        <item name="android:textColor">@color/my_text</item>
+        <item name="colorSecondary">@color/my_secondary</item>
+        <item name="android:statusBarColor">@color/my_statusbar</item>
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
