--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,11 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:layout_marginTop="27dp"
+    android:layout_marginBottom="27dp"
+    android:layout_marginLeft="48dp"
+    android:layout_marginRight="48dp">
 
     <Button
         android:id="@+id/button2"
@@ -17,7 +21,10 @@
         app:layout_constraintEnd_toStartOf="@+id/button3"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:nextFocusDown="@id/switch1"
+        android:nextFocusRight="@id/button3"
+        android:nextFocusLeft="@id/button4"/>
 
     <ImageView
         android:id="@+id/flagImageView"
@@ -36,7 +43,8 @@
         android:text="@string/spin_message"
         app:layout_constraintBottom_toBottomOf="@+id/flagImageView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/flagImageView" />
+        app:layout_constraintTop_toTopOf="@+id/flagImageView"
+        android:focusable="false"/>
 
     <Button
         android:id="@+id/button3"
@@ -48,7 +56,10 @@
         app:layout_constraintEnd_toStartOf="@+id/button4"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/button2"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:nextFocusDown="@id/switch1"
+        android:nextFocusRight="@id/button4"
+        android:nextFocusLeft="@id/button2"/>
 
     <Button
         android:id="@+id/button4"
@@ -61,5 +72,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/button3"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:nextFocusDown="@id/switch1"
+        android:nextFocusRight="@id/button2"
+        android:nextFocusLeft="@id/button3"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
